--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "sass": "^1.52.3",
+    "typed.js": "^2.0.12",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
