--- a/public/manifest.json
+++ b/public/manifest.json
@@ -8,12 +8,12 @@
       "type": "image/png"
     },
     {
-      "src": "images/icon-192x192.png",
+      "src": "icon-192x192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "images/icon-500x500.png",
+      "src": "icon-500x500.png",
       "sizes": "500x500",
       "type": "image/png"
     }
